src/main/resources/static/css/history.css
@font-face{
    font-family: NewFont;
    src: url("US101.TTF");
    font-weight: bold;
}
::-webkit-scrollbar {
    display: none;
}
.Title{
    margin-left: 1em;
    padding-left: 0px;
    padding-bottom: 0.5em;
}
.title{
    font-family: NewFont, sans-serif;
    font-size: 1.1em;
    color: #FFFFFF;
    letter-spacing: 0.1em;
    float: left;
}
.title.page{
    font-size: 2em;
}
.taskQueue{
    overflow: auto;
    min-height: 30em;
    max-height: 55em;
    margin-left: 1.6em;
    margin-right: 1em;
    margin-top: 1em;
    margin-bottom: 0.5em;
    border-radius: 0.6rem!important;
    padding: 10px;
    padding-left: 0px;
    padding-right: 0px;
    background-color: #3E3A39;
}
.task{
    min-width: 570px;
    margin: 0.6em;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}
.agvTask{
    background-color: #5C5C5C;
    color: #FFFFFF;
    width: 100%;
    height: 3em;
    border-radius: 0.6rem!important;
    text-align: left;
}
.agvTask .row{
    margin: 0px;
    padding: 0px;
}
.agvTask.error{
    background-color: red;
    width: 100%;
    height: 3em;
    border-radius: 0.6rem!important;
    animation: fade 1000ms infinite;
}
.taskTitle{
    margin: 0px;
    padding: 0px;
    padding-top: 0.3em!important;
    height: 2em;
    font-size: 0.6em;
    color: #C9C9C9;
}
.taskTitle .col{
    height: 100%;
}
.taskContent{
    height: 1.5em;
    margin: 0px;
    padding: 0px;
    /* padding-top: 0.8%!important; */
}
.taskContent .col{
    display: flex;
    height: 100%;
}
.taskContent .col p{
    font-size: 0.85em;
    padding-right: 0.4em;
}
.taskTB{
    height: 100%;
    font-size: 0.8em;
}
.taskTB .col-12 .row{
    height: 100%;
}
.taskBar{
    padding-top: 4.8%;
}
#notification{
    padding-top: 0.625em;
    min-height: 30em;
    max-height: 55em;
    overflow: auto;
    margin: 1em;
    border-radius: 0.6rem!important;
    color: #FFFFFF;
    background-color: #3E3A39;
    /* background-color: #303030; */
}
#notification .row{
    margin-top: 0.5em;
    margin-bottom: 0.5em; 
    height: 3em;
}
.message{
    margin-left: 0.6em;
    margin-right: 0.6em;
    padding-left: 0.9em;
    padding-right: 0.9em;
    background-color: #5C5C5C;
    /* background-color: #303030; */
    width: 100%;
    min-width: 400px;
    display: flex;
    align-items: center;
    border-radius: 0.6rem!important;
}
.message .nfStatus{
    height: 65%;
    width: 0.3em;
    border-radius: 20rem!important;
    display: flex;
}
.nfStatus.normal{
    background-color: #C9C9C9;
}
.nfStatus.info{
    background-color: #2377F6;
}
.nfStatus.warning{
    background-color: #EAC343;
}
.nfStatus.danger{
    background-color: #FF0000;
}
.messageContentDiv{
    width: 100%;
    padding-left: 3%;
    text-align: left;
}
.messageTitle{
    display: inline;
    min-height: 1.3em;
    font-size: 1.3em;
}
.messageContent{
    padding-left: 1.5%;
    display: inline;
    min-height: 1em;
    font-size: 1em;
}
.messageTime{
    padding-top: 0.5%;
    float:right;
}
.taskstatus{
    display: flex;
    text-align: center;
    align-items: center;
    font-family: NewFont, sans-serif;
    font-size: 1.6em;
}
.taskstatus.canceled{color:#ff1919}
.taskstatus.completed{color:#09b01f}
.taskstatus.waiting{color:#a5a5a5}
.taskstatus.executing{color:#e8c32d}
.tasktime{
    /* float: right; */
    font-size: 16px;
    display: flex;
    align-items: center;
}

